syntax = "proto3";

option csharp_namespace = "ProductionStructure.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message GetRequest{
	string id = 1;
}

message DeleteRequest{
	string id = 1;
}

message Email{
	string user = 1;
	string server = 2;
}

message NullableEmail{
	oneof kind{
		google.protobuf.Empty null = 1;
		Email email = 2;
	}
}

message Phone{
	string code = 1;
	string number = 2;
}

message NullablePhone{
	oneof kind{
		google.protobuf.Empty null = 1;
		Phone Phone = 2;
	}
}

enum WorkMode{
	Continuous = 0;
	Discrete = 1;
	PerLot = 2;
}

message Location{
	Country country = 1;
	string city = 2;
	string address = 3;
}

message Country{
	string countryName = 1;
	string phoneCode = 2;
	string countryShortCode = 3;
}

message Guid{
	string value = 1;
}

message NullableGuid{
	oneof kind{
		google.protobuf.Empty null = 1;
		Guid id = 2;
	}
}

message NullableString{
	oneof kind{
		google.protobuf.NullValue null = 1;
		string value = 2;
	}
}